hphp/test/zend/good/ext/mysqli/tests/bug38003.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("mysqli")) print "skip";
}
