hphp/test/zend/bad/Zend/tests/dval_to_lval_32.php.skipif
<?php
if (PHP_INT_SIZE != 4)
	 die("skip for machines with 32-bit longs");
?>